# nimbus-cachyos-pack

./: .gitignore  CLAUDE.md  CREDITS.md  LICENSE  README.md  install.sh  nimbus  revert.sh
1-base/: doctor.sh  nimbus-cachyos-macos.sh  whitesur-cachyos-macos.sh
10-shader-engine/: HEXEN-TUNING-LOOP.md  README.md  hexen-autotune.py  hexen-tune.py  hexen-vision-judge.py  install.sh  revert.sh  run.sh
10-shader-engine/dream/: dream-cycle.sh
10-shader-engine/nimbus-flux/: .gitignore  Cargo.toml
10-shader-engine/nimbus-flux/assets/shaders/: fluid.wgsl
10-shader-engine/nimbus-flux/src/: fluid.rs  main.rs  scene_hexen.rs
2-settings-refine/: doctor.sh  install.sh  revert.sh
2-settings-refine/coreylavender/: CoreyLavender.colors  install.sh  revert.sh
2-settings-refine/systemd/: refine-icons.path  refine-icons.service
3-krunner-finder/: install.sh  revert.sh
3-krunner-finder/claude-runner/: claude_runner.py  dbus-service.tmpl  install.sh  plugin.desktop.tmpl
3-krunner-finder/row-tweak/: ResultDelegate.qml  ResultsView.qml  apply.sh  install.sh  krunner-row-tweak.hook  revert.sh
4-login-lock/: install.sh  revert.sh
5-system-qol/: install.sh  revert.sh
5-system-qol/fish/: qol.fish
6-local-ai/: Modelfile.gemma4-26b  Modelfile.gemma4-8b  Modelfile.hermes4.3-36b  Modelfile.qwen3.6-27b  install.sh  ollama-kv-cache.conf  revert.sh
7-notifications/: config.json  install.sh  revert.sh  style-dark.css  style-light.css
8-dolphin-quicklook/: PKGBUILD  dolphinui.rc  install.sh  revert.sh
9-gpu-effects/: install.sh  revert.sh
tests/: run.sh
(+62 files in other folders)
