[package]
name = "nimbus-flux"
version = "0.1.0"
edition = "2021"
description = "Nimbus Flux — standalone GPU compute-shader fluid engine (Nimbus pack, Layer 10)"
license = "MIT"

[dependencies]
# Pinned to the latest stable bevy. `wayland` makes winit talk Wayland natively
# (this is a Wayland-only session); the default x11 feature stays as an XWayland
# fallback. Everything renders through wgpu's Vulkan backend on the RTX 4090.
bevy = { version = "0.18.1", features = ["wayland"] }

# Dev iteration: build with `--features fastdev` to hot-link bevy as a shared lib,
# which slashes incremental rebuild time. Release/installed builds omit it so the
# binary is self-contained.
[features]
fastdev = ["bevy/dynamic_linking"]

# A fluid sim wants an optimised solver even in dev — compile our own crate at -O1
# and bevy's heavy deps at -O3 so the first run isn't a slideshow.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
